--- a/i/index.html
+++ b/i/index.html
@@ -19,7 +19,8 @@
 <div class="contenedor2">
 
 
-<div  class="izquierda">diego simon buritica, miguel ciro</div>
+<div  class="izquierda">
+    <p>simon buritica</p>miguel ciro</div>
 <div  class="centro"></div>
 <div  class="derecha"></div>
 
